Update Flight Price Prediction.ipynb

--- a/Flight Price Prediction.ipynb
+++ b/Flight Price Prediction.ipynb
@@ -3439,7 +3439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Engineering on Train data"
+    "## Feature Engineering on Test data"
    ]
   },
   {
